[package]
name = "cokedit"
version = "0.1.0"
authors = ["Ron B <me@ronthecookie.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.9"
[dependencies.crossterm]
version = "0.16"
features = ["event-stream"] 
git = "https://github.com/ronthecookie/crossterm"
branch = "add-keymodifier-none"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
