[package]
name = "cokedit"
version = "0.1.0"
authors = ["Ron B <me@ronthecookie.me>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
platform-dirs = "0.2.0"
structopt = "0.3.9"
lalrpop-util = "0.17.2"
regex = "1"

[dependencies.crossterm]
version = "0.16"
features = ["event-stream"] 
git = "https://github.com/ronthecookie/crossterm"
branch = "add-keymodifier-none"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
